Configure Docker Hub credentials in GitHub Actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,4 +50,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: your-dockerhub-username/pfa-ci-cd:latest
+          tags: omar544/pfa-ci-cd:latest
